fix: wonky scrollbar styles, still need to actually solve this

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,3 +91,26 @@
     padding-bottom: 10rem;
   }
 }
+
+/* TODO: fix this so that the shadcn scroll area bar can be used */
+
+/* Scrollbar background */
+::-webkit-scrollbar {
+  @apply bg-background;
+}
+
+/* Scrollbar thumb (foreground) */
+::-webkit-scrollbar-thumb {
+  @apply bg-primary/10;
+  @apply rounded-full;
+}
+
+/* Scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-primary/15;
+}
+
+/* Optional: Scrollbar width */
+::-webkit-scrollbar {
+  @apply w-2.5;
+}
